dark mode fixed :)

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
  html
  {
-    background-color: #FCFFFF;
-    color: #7F9CA1;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+        background-color: #FCFFFF;
+        color: black;
 }
 
 a:hover {
@@ -50,7 +53,7 @@ img {
     height: auto;
 }
 
-/* .dark-mode
+.dark-mode
  {
     background-color: #282827;
     color: #C0CACE;
@@ -58,19 +61,19 @@ img {
     overflow: auto;
     width: 100%;
     height: 100%;
-} */
+}
 
 .jumbotron {
     background-color: transparent !important;
 }
 
-/* .dark-button {
+.dark-button {
     display: flex;
     justify-content: flex-end;
     float: right;
-}  */
+} 
 
- /* @media (max-width: 390px) {
+ @media (max-width: 390px) {
     .navbar-header{float:none;}
     .navbar-left, .navbar-right{float:none !important;}
     .navbar-toggle{display: block;}
@@ -83,4 +86,4 @@ img {
     .collapse.in{display:block !important;}
     .navbar-nav .open .dropdown-menu{position:static; float:none; width:auto; margin-top:0; background-color:transparent; border:0; -webkit-box-shadow:none; box-shadow:none;}}
     .row{justify-content: center; align-items: center;}
-    .jumbotron{justify-content: center; align-items: center;} */
+    .jumbotron{justify-content: center; align-items: center;}
